Fixed photos displaying on mobile with margin top

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
   {
     font-size: 0.7em;
     transition: 0,3s;
+    margin-top: 50%;
   }
 
 }
